--- a/webgl-app/package.json
+++ b/webgl-app/package.json
@@ -7,7 +7,9 @@
     "gl-matrix": "^2.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "three": "^0.97.0",
+    "three-gltf-loader": "^1.97.0"
   },
   "scripts": {
     "start": "react-scripts start",
